--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
+DB_CONNECTION_STRING=mongodb+srv://vanechaaale:supersecretpassword@cluster0.doxmn6v.mongodb.net/?retryWrites=true&w=majority
